# ankicli

./: .gitignore  README.md  deckModule.py  example.py  modelModule.py  noteModule.py  noteModule2.py  parseModule.py  pyproject.toml  requestModule.py
python/: img_plugin.py  noteModule2.py  parseModule.py  rendererModule.py
src/: img_plugin.py  modelModule.py  noteModule.py  noteModule2.py  parseModule.py  re_exprs.py  rendererModule.py
src/anki_api/: deckModule.py  requestModule.py
src/ankicli/: modelModule.py  noteModule2.py  parseModule.py  re_exprs.py
src/ankicli/anki_api/: deckModule.py  requestModule.py
src/ankicli/renderer/: img_plugin.py  rendererModule.py
src/config/: parse_config.yaml
src/renderer/: mathjax_plugin.py  rendererModule.py
tests/: test_parseModule.py  test_rendererModule.py
tests/anki_api/: test_requestModule.py
tests/test_noteset/: cards.md  test_noteModule.py
tests/test_renderer/: test_img_plugin.py  test_mathjax_plugin.py
vault/: example_test.md
